--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Review</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <div>
 
+    </div>
 </body>
 </html>
