--- a/index.html
+++ b/index.html
@@ -3,8 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Review</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="main.js"></script>
 </head>
 <body>
 
+<nav>
+    <div class="hamburger">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+    </div>
+    <ul class="nav-links">
+        <a href="#">About</a>
+        <a href="#">About</a>
+        <a href="#">About</a>
+    </ul>
+</nav>
+
+<div id="landing-page"></div>
+
 </body>
-</html>
+</html> 
