Completed basic anchor layout for nav

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="line"></div>
     </div>
     <ul class="nav-links">
-        <a href="#">About</a>
+        <a href="#"><div>About</div></a>
         <a href="#">About</a>
         <a href="#">About</a>
     </ul>
