Sign Up button added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
     </ul>
 </nav>
 
-<div id="landing-page"></div>
+<div id="landing-page">
+    <btn id="signUp">Sign Up</btn>
+    <div id="blur">
+        <div>
+
+        </div>
+    </div>
+</div>
 
 </body>
 </html> 
