--- a/index.html
+++ b/index.html
@@ -3,25 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>Review</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
 </head>
 <body>
 
 <nav>
+    <a href="home" id="nav-brand"></a>
+    <div class="search">
+        <input class="search-bar" type="text" placeholder="Search..">
+        <button type="submit" class="search-button">
+            <i class="fa fa-search"></i>
+        </button>
+    </div>
     <div class="hamburger">
         <div class="line"></div>
         <div class="line"></div>
         <div class="line"></div>
     </div>
-    <ul class="nav-links">
+    <div class="nav-links">
         <a href="#"><div>About</div></a>
         <a href="#">About</a>
         <a href="#">About</a>
-    </ul>
+    </div>
 </nav>
 
-<div id="landing-page"></div>
+<div id="landing-page">
+
+</div>
 
 </body>
 </html> 
