Added close button

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <btn id="signUp">Sign Up</btn>
     <div id="blur">
         <div>
-
+            <btn id="close">Close</btn>
         </div>
     </div>
 </div>
