Replaced SignUpBtn with a class

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </nav>
 
 <div id="landing-page">
-    <btn id="signUp">Sign Up</btn>
+    <btn class="button signUp">Sign Up</btn>
     <div id="blur">
         <div>
             <btn id="close">Close</btn>
