Replaced close button id with a class

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <btn class="button signUp">Sign Up</btn>
     <div id="blur">
         <div>
-            <btn id="close">Close</btn>
+            <btn class="button close">Close</btn>
         </div>
     </div>
 </div>
