--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
     <div id="blur">
         <div>
             <btn class="button close">Close</btn>
+            <h1>SIGN UP</h1>
+            <h2>Name</h2>
+            <input type="text" placeholder="name">
+            <h2>E-Mail</h2>
+            <input type="text" placeholder="email">
+            <h2>Username</h2>
+            <input type="text" placeholder="user">
+            <h2>Password</h2>
+            <input type="text" placeholder="Password">
+            <h2>Re-enter Password</h2>
+            <input type="text" placeholder="Password">
         </div>
     </div>
 </div>
