Converted Sign Up page to use form tag instead of multiple input tags

--- a/index.html
+++ b/index.html
@@ -33,17 +33,18 @@
     <div id="blur">
         <div>
             <btn class="button close">Close</btn>
-            <h1>SIGN UP</h1>
-            <h2>Name</h2>
-            <input type="text" placeholder="name">
-            <h2>E-Mail</h2>
-            <input type="text" placeholder="email">
-            <h2>Username</h2>
-            <input type="text" placeholder="user">
-            <h2>Password</h2>
-            <input type="text" placeholder="Password">
-            <h2>Re-enter Password</h2>
-            <input type="text" placeholder="Password">
+            <form>
+                Name:<br>
+                <input type="text" name="name"><br>
+                Email:<br>
+                <input type="email" name="email"><br>
+                Username:<br>
+                <input type="text" name="user"><br>
+                Password:<br>
+                <input type="password" name="password"><br>
+                Re-enter Password:<br>
+                <input type="password" name="password">
+            </form>
         </div>
     </div>
 </div>
