Added Sumbit button to form Added Login button

--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
 </nav>
 
 <div id="landing-page">
-    <btn class="button signUp">Sign Up</btn>
+    <btn class="button-style loginBtn">Login</btn>
+    <btn class="button-style signBtn">Sign Up</btn>
     <div id="blur">
         <div>
-            <btn class="button close">Close</btn>
+            <btn class="close">Close</btn>
             <form>
                 Name:<br>
                 <input type="text" name="name"><br>
@@ -43,7 +44,8 @@
                 Password:<br>
                 <input type="password" name="password"><br>
                 Re-enter Password:<br>
-                <input type="password" name="password">
+                <input type="password" name="password"><br>
+                <input type="submit" value="Submit">
             </form>
         </div>
     </div>
