Added Div for buttons

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
 </nav>
 
 <div id="landing-page">
-    <btn class="button-style loginBtn">Login</btn>
-    <btn class="button-style signBtn">Sign Up</btn>
+    <div class="buttons">
+        <btn class="button-style loginBtn">Login</btn>
+        <btn class="button-style signBtn">Sign Up</btn>
+    </div>
     <div id="blur">
         <div>
             <btn class="close">Close</btn>
