--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@
         <btn class="button-style loginBtn">Login</btn>
         <btn class="button-style signBtn">Sign Up</btn>
     </div>
+
     <div id="blur">
-    <div class="search-main">
-        <form class="search" action="/action_page.php">
+        <div class="search-main">
+            <form class="search" action="/action_page.php">
             <input type="text" placeholder="Search.." name="search">
             <button type="submit">
                 <i class="fa fa-search"></i>
             </button>
-        </form>
-    </div>
-    <!-- <btn class="button-style" id="signUp">Sign Up</btn> -->
-    <!-- <btn class="button-style" id="login>">Login</btn> -->
-    <!-- <div id="blur">
+            </form>
+        </div>
+    <!---------    FORMS       --------->
         <div>
             <btn class="close">Close</btn>
+            <!---------    SIGN UP FORM       --------->
             <form id="form_signUp">
                 <h2>Create an Account</h2>
                 Name:<br>
@@ -63,9 +63,10 @@
                 Re-enter Password:<br>
                 <input type="password" name="password"><br>
                 <input type="checkbox" name="Terms" value="True">
-                    I accept the Terms and Conditions <br>
+                I accept the Terms and Conditions <br>
                 <input type="submit" value="Register">
             </form>
+            <!---------   LOGIN FORMS       --------->
             <form id="form_login">
                 <h2>Login</h2>
                 Username:<br>
@@ -75,7 +76,7 @@
                 <input type="submit" value="Login">
             </form>
         </div>
-    </div> -->
+    </div>
 </div>
 
 </body>
