--- a/index.html
+++ b/index.html
@@ -32,51 +32,53 @@
 </nav>
 
 <div id="landing-page">
-    <div class="buttons">
-        <btn class="button-style loginBtn">Login</btn>
-        <btn class="button-style signBtn">Sign Up</btn>
+
+    <div class="search-main">
+        <form class="search" action="/action_page.php">
+        <input type="text" placeholder="Search.." name="search">
+        <button type="submit">
+            <i class="fa fa-search"></i>
+        </button>
+        </form>
     </div>
 
-    <div id="blur">
-        <div class="search-main">
-            <form class="search" action="/action_page.php">
-            <input type="text" placeholder="Search.." name="search">
-            <button type="submit">
-                <i class="fa fa-search"></i>
-            </button>
-            </form>
-        </div>
-    <!---------    FORMS       --------->
-        <div>
-            <btn class="close">Close</btn>
-            <!---------    SIGN UP FORM       --------->
-            <form id="form_signUp">
-                <h2>Create an Account</h2>
-                Name:<br>
-                <input type="text" name="name"><br>
-                Email:<br>
-                <input type="email" name="email"><br>
-                Username:<br>
-                <input type="text" name="user"><br>
-                Password:<br>
-                <input type="password" name="password"><br>
-                Re-enter Password:<br>
-                <input type="password" name="password"><br>
-                <input type="checkbox" name="Terms" value="True">
-                I accept the Terms and Conditions <br>
-                <input type="submit" value="Register">
-            </form>
-            <!---------   LOGIN FORMS       --------->
-            <form id="form_login">
-                <h2>Login</h2>
-                Username:<br>
-                <input type="text" name="user"><br>
-                Password:<br>
-                <input type="password" name="password"><br>
-                <input type="submit" value="Login">
-            </form>
-        </div>
+    <div class="buttons">
+        <button class="button-style loginBtn">Login</button>
+        <button class="button-style signBtn">Sign Up</button>
     </div>
+
+<!--    <div id="blur">-->
+<!--    &lt;!&ndash;-&#45;&#45;&#45;&#45;&#45;&#45;    FORMS       -&#45;&#45;&#45;&#45;&#45;&#45;&ndash;&gt;-->
+<!--        <div>-->
+<!--            <btn class="close">Close</btn>-->
+<!--            &lt;!&ndash;-&#45;&#45;&#45;&#45;&#45;&#45;    SIGN UP FORM       -&#45;&#45;&#45;&#45;&#45;&#45;&ndash;&gt;-->
+<!--            <form id="form_signUp">-->
+<!--                <h2>Create an Account</h2>-->
+<!--                Name:<br>-->
+<!--                <input type="text" name="name"><br>-->
+<!--                Email:<br>-->
+<!--                <input type="email" name="email"><br>-->
+<!--                Username:<br>-->
+<!--                <input type="text" name="user"><br>-->
+<!--                Password:<br>-->
+<!--                <input type="password" name="password"><br>-->
+<!--                Re-enter Password:<br>-->
+<!--                <input type="password" name="password"><br>-->
+<!--                <input type="checkbox" name="Terms" value="True">-->
+<!--                I accept the Terms and Conditions <br>-->
+<!--                <input type="submit" value="Register">-->
+<!--            </form>-->
+<!--            &lt;!&ndash;-&#45;&#45;&#45;&#45;&#45;&#45;   LOGIN FORMS       -&#45;&#45;&#45;&#45;&#45;&#45;&ndash;&gt;-->
+<!--            <form id="form_login">-->
+<!--                <h2>Login</h2>-->
+<!--                Username:<br>-->
+<!--                <input type="text" name="user"><br>-->
+<!--                Password:<br>-->
+<!--                <input type="password" name="password"><br>-->
+<!--                <input type="submit" value="Login">-->
+<!--            </form>-->
+<!--        </div>-->
+<!--    </div>-->
 </div>
 
 </body>
