--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
         <form class="search" action="/action_page.php">
             <input type="text" placeholder="Search.." name="search">
             <button type="submit">
-                <i class="fa fa-search"></i>
+                <i class="fa fa-search" style="color:blue;"></i>
             </button>
         </form>
+    </div>
+    <div class="buttons-nav">
+        <button class="button-style login-button">Login</button>
+        <button class="button-style sign-button">Sign Up</button>
     </div>
     <div class="hamburger">
         <div class="line"></div>
@@ -42,43 +46,43 @@
         </form>
     </div>
 
-    <div class="buttons">
-        <button class="button-style loginBtn">Login</button>
-        <button class="button-style signBtn">Sign Up</button>
+    <div class="buttons-main">
+        <button class="button-style login-button">Login</button>
+        <button class="button-style sign-button">Sign Up</button>
     </div>
 
-<!--    <div id="blur">-->
-<!--    &lt;!&ndash;-&#45;&#45;&#45;&#45;&#45;&#45;    FORMS       -&#45;&#45;&#45;&#45;&#45;&#45;&ndash;&gt;-->
-<!--        <div>-->
-<!--            <btn class="close">Close</btn>-->
-<!--            &lt;!&ndash;-&#45;&#45;&#45;&#45;&#45;&#45;    SIGN UP FORM       -&#45;&#45;&#45;&#45;&#45;&#45;&ndash;&gt;-->
-<!--            <form id="form_signUp">-->
-<!--                <h2>Create an Account</h2>-->
-<!--                Name:<br>-->
-<!--                <input type="text" name="name"><br>-->
-<!--                Email:<br>-->
-<!--                <input type="email" name="email"><br>-->
-<!--                Username:<br>-->
-<!--                <input type="text" name="user"><br>-->
-<!--                Password:<br>-->
-<!--                <input type="password" name="password"><br>-->
-<!--                Re-enter Password:<br>-->
-<!--                <input type="password" name="password"><br>-->
-<!--                <input type="checkbox" name="Terms" value="True">-->
-<!--                I accept the Terms and Conditions <br>-->
-<!--                <input type="submit" value="Register">-->
-<!--            </form>-->
-<!--            &lt;!&ndash;-&#45;&#45;&#45;&#45;&#45;&#45;   LOGIN FORMS       -&#45;&#45;&#45;&#45;&#45;&#45;&ndash;&gt;-->
-<!--            <form id="form_login">-->
-<!--                <h2>Login</h2>-->
-<!--                Username:<br>-->
-<!--                <input type="text" name="user"><br>-->
-<!--                Password:<br>-->
-<!--                <input type="password" name="password"><br>-->
-<!--                <input type="submit" value="Login">-->
-<!--            </form>-->
-<!--        </div>-->
-<!--    </div>-->
+    <div id="blur">
+    <!---------    FORMS       --------->
+        <div>
+            <button class="close">Close</button>
+            <!---------    SIGN UP FORM       --------->
+            <form id="form_signUp">
+                <h2>Create an Account</h2>
+                Name:<br>
+                <input type="text" name="name"><br>
+                Email:<br>
+                <input type="email" name="email"><br>
+                Username:<br>
+                <input type="text" name="user"><br>
+                Password:<br>
+                <input type="password" name="password"><br>
+                Re-enter Password:<br>
+                <input type="password" name="password"><br>
+                <input type="checkbox" name="Terms" value="True">
+                I accept the Terms and Conditions <br>
+                <input type="submit" value="Register">
+            </form>
+            <!---------   LOGIN FORMS       --------->
+            <form id="form_login">
+                <h2>Login</h2>
+                Username:<br>
+                <input type="text" name="user"><br>
+                Password:<br>
+                <input type="password" name="password"><br>
+                <input type="submit" value="Login">
+            </form>
+        </div>
+    </div>
 </div>
 
 </body>
