--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
     </div>
 
     <div class="buttons-main">
-        <button class="button-style login-button">Login</button>
-        <button class="button-style sign-button">Sign Up</button>
+        <button class="button-style login-button log_buttons">Login</button>
+        <button class="button-style sign-button log_buttons">Sign Up</button>
     </div>
 
     <div id="blur">
     <!---------    FORMS       --------->
         <div>
-            <button class="close">Close</button>
+            <button class="close log_buttons">Close</button>
             <!---------    SIGN UP FORM       --------->
             <form id="form_signUp">
                 <h2>Create an Account</h2>
