--- a/results.html
+++ b/results.html
@@ -3,8 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <title>Results</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="results.css">
+    <script src="results.js"></script>
 </head>
 <body>
+
+<nav>
+    <a href="home" id="nav-brand"></a>
+    <div class="search-nav">
+        <form class="search" action="/action_page.php">
+            <input type="text" placeholder="Search.." name="search">
+            <button type="submit">
+                <i class="fa fa-search" style="color:blue;"></i>
+            </button>
+        </form>
+    </div>
+    <div class="buttons-nav">
+        <button class="button-style login-button">Login</button>
+        <button class="button-style sign-button">Sign Up</button>
+    </div>
+    <div class="hamburger">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+    </div>
+    <ul class="nav-links">
+        <a href="#">About</a>
+        <a href="#">About</a>
+        <a href="#">About</a>
+    </ul>
+</nav>
+
+<div id="landing-page">
+    <div class="search-main">
+        <form class="search" action="/action_page.php">
+            <input type="text" placeholder="Search.." name="search">
+            <button type="submit">
+                <i class="fa fa-search"></i>
+            </button>
+        </form>
+    </div>
+
+    <div id = "toggle-background">
+        <p class="toggle">LIST</p>
+        <div class="toggle">
+            <div class="toggle-switch">
+            </div>
+        </div>
+        <p class="toggle">MAP</p>
+    </div>
+</div>
 
 </body>
 </html>
