--- a/results.html
+++ b/results.html
@@ -36,6 +36,10 @@
 </nav>
 
 <div id="landing-page">
+    <div class="views">
+        <div id="map-view"></div>
+        <div id="list-view"></div>
+    </div>
     <div class="search-main">
         <form class="search" action="/action_page.php">
             <input type="text" placeholder="Search.." name="search">
@@ -53,6 +57,8 @@
         </div>
         <p class="toggle">MAP</p>
     </div>
+</div>
+
 </div>
 
 </body>
