noselect class added

--- a/results.html
+++ b/results.html
@@ -50,12 +50,12 @@
     </div>
 
     <div id = "toggle-background">
-        <p class="toggle">LIST</p>
+        <p class="toggle noselect">LIST</p>
         <div class="toggle">
             <div class="toggle-switch">
             </div>
         </div>
-        <p class="toggle">MAP</p>
+        <p class="toggle noselect">MAP</p>
     </div>
 </div>
 
