--- a/results.html
+++ b/results.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Results</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="results.css">
+    <link rel="stylesheet" href="style/nav.css">
+    <link rel="stylesheet" href="style/results.css">
     <script src="results.js"></script>
 </head>
 <body>
