Added list item view

--- a/results.html
+++ b/results.html
@@ -38,7 +38,36 @@
 <div id="landing-page">
     <div class="views">
         <div id="map-view"></div>
-        <div id="list-view"></div>
+        <div id="list-view">
+            <div class="list-item">
+                <div class="item-image"id="item1"></div>
+                <div>
+                    <h2>Niagara Region</h2>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad delectus fugit in ipsam officiis, repellendus? Asperiores consequuntur deserunt ea id.</p>
+                </div>
+            </div>
+            <div class="list-item">
+                <div class="item-image"></div>
+                <div>
+                    <h2>Niagara Region</h2>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad delectus fugit in ipsam officiis, repellendus? Asperiores consequuntur deserunt ea id.</p>
+                </div>
+            </div>
+            <div class="list-item">
+                <div class="item-image"></div>
+                <div>
+                    <h2>Niagara Region</h2>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad delectus fugit in ipsam officiis, repellendus? Asperiores consequuntur deserunt ea id.</p>
+                </div>
+            </div>
+            <div class="list-item">
+                <div class="item-image"></div>
+                <div>
+                    <h2>Niagara Region</h2>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad delectus fugit in ipsam officiis, repellendus? Asperiores consequuntur deserunt ea id.</p>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="search-main">
         <form class="search" action="/action_page.php">
