--- a/results.html
+++ b/results.html
@@ -5,6 +5,7 @@
     <title>Results</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style/results.css">
+    <script src="https://kit.fontawesome.com/673e50af74.js" crossorigin="anonymous"></script>
     <script src="results.js"></script>
 </head>
 <body>
@@ -42,33 +43,58 @@
             <div class="list-item">
                 <div class="item-image"id="item1"></div>
                 <div>
-                    <h2>Niagara Region</h2>
+                    <h2>Niagara Region
+                        <i class="fas fa-star star"></i>
+                        <i class="fas fa-star star"></i>
+                        <i class="fas fa-star star"></i>
+                        <i class="fas fa-star star"></i>
+                        <i class="fas fa-star star"></i>
+                    </h2>
                     <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad delectus fugit in ipsam officiis, repellendus? Asperiores consequuntur deserunt ea id.</p>
                 </div>
             </div>
             <div class="list-item">
                 <div class="item-image"></div>
                 <div>
-                    <h2>Niagara Region</h2>
+                    <h2>Hamilton
+                        <i class="fas fa-star star"></i>
+                        <i class="fas fa-star star"></i>
+                        <i class="fas fa-star star"></i>
+                        <i class="fas fa-star star"></i>
+                        <i class="fas fa-star star"></i></h2>
+                    <p> Hamilton features many types of factories.
+                        Big factories, small factories, and even medium
+                        factories.</p>
+                </div>
+            </div>
+            <div class="list-item">
+                <div class="item-image"></div>
+                <div>
+                    <h2>Algonquin
+                        <i class="fas fa-star star"></i>
+                        <i class="fas fa-star star"></i>
+                        <i class="fas fa-star star"></i>
+                        <i class="fas fa-star star"></i>
+                        <i class="fas fa-star star"></i></h2>
                     <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad delectus fugit in ipsam officiis, repellendus? Asperiores consequuntur deserunt ea id.</p>
                 </div>
             </div>
             <div class="list-item">
                 <div class="item-image"></div>
                 <div>
-                    <h2>Niagara Region</h2>
-                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad delectus fugit in ipsam officiis, repellendus? Asperiores consequuntur deserunt ea id.</p>
-                </div>
-            </div>
-            <div class="list-item">
-                <div class="item-image"></div>
-                <div>
-                    <h2>Niagara Region</h2>
+                    <h2>Barrie
+                        <i class="fas fa-star star"></i>
+                        <i class="fas fa-star star"></i>
+                        <i class="fas fa-star star"></i>
+                        <i class="fas fa-star star"></i>
+                        <i class="fas fa-star star"></i></h2>
                     <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad delectus fugit in ipsam officiis, repellendus? Asperiores consequuntur deserunt ea id.</p>
                 </div>
             </div>
         </div>
     </div>
+
+
     <div class="search-main">
         <form class="search" action="/action_page.php">
             <input type="text" placeholder="Search.." name="search">
