Fixed issues where page would not allow scrolling. Converted list view into an unordered list.

--- a/results.html
+++ b/results.html
@@ -37,10 +37,9 @@
 </nav>
 
 <div id="landing-page">
-    <div class="views">
-        <div id="map-view"></div>
-        <div id="list-view">
-            <div class="list-item">
+    <div id="list-view">
+        <ul>
+            <li class="list-item">
                 <div class="item-image"id="item1"></div>
                 <div>
                     <h2>Niagara Region
@@ -52,47 +51,36 @@
                     </h2>
                     <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad delectus fugit in ipsam officiis, repellendus? Asperiores consequuntur deserunt ea id.</p>
                 </div>
-            </div>
-            <div class="list-item">
-                <div class="item-image"></div>
+            </li>
+            <li class="list-item">
+                <div class="item-image"id="item2"></div>
                 <div>
-                    <h2>Hamilton
+                    <h2>Niagara Region
                         <i class="fas fa-star star"></i>
                         <i class="fas fa-star star"></i>
                         <i class="fas fa-star star"></i>
                         <i class="fas fa-star star"></i>
-                        <i class="fas fa-star star"></i></h2>
-                    <p> Hamilton features many types of factories.
-                        Big factories, small factories, and even medium
-                        factories.</p>
-                </div>
-            </div>
-            <div class="list-item">
-                <div class="item-image"></div>
-                <div>
-                    <h2>Algonquin
                         <i class="fas fa-star star"></i>
-                        <i class="fas fa-star star"></i>
-                        <i class="fas fa-star star"></i>
-                        <i class="fas fa-star star"></i>
-                        <i class="fas fa-star star"></i></h2>
+                    </h2>
                     <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad delectus fugit in ipsam officiis, repellendus? Asperiores consequuntur deserunt ea id.</p>
                 </div>
-            </div>
-            <div class="list-item">
-                <div class="item-image"></div>
+            </li>
+            <li class="list-item">
+                <div class="item-image"id="item2"></div>
                 <div>
-                    <h2>Barrie
+                    <h2>Niagara Region
                         <i class="fas fa-star star"></i>
                         <i class="fas fa-star star"></i>
                         <i class="fas fa-star star"></i>
                         <i class="fas fa-star star"></i>
-                        <i class="fas fa-star star"></i></h2>
+                        <i class="fas fa-star star"></i>
+                    </h2>
                     <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad delectus fugit in ipsam officiis, repellendus? Asperiores consequuntur deserunt ea id.</p>
                 </div>
-            </div>
+            </li>
+        </ul>
         </div>
-    </div>
+    <div class="map-view"></div>
 
 
     <div class="search-main">
