Images and javascript added for results page
;

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
 
 <nav>
-    <a href="home" id="nav-brand"></a>
+    <a href="index.html" id="nav-brand"></a>
     <div class="search-nav">
-        <form class="search" action="/action_page.php">
-            <input type="text" placeholder="Search.." name="search">
+        <form class="search">
+            <input type="text" placeholder="Search.." href="results.html">
             <button type="submit">
                 <i class="fa fa-search" style="color:blue;"></i>
             </button>
