--- a/results.html
+++ b/results.html
@@ -11,7 +11,7 @@
 <body>
 
 <nav>
-    <a href="home" id="nav-brand"></a>
+    <a href="index.html" id="nav-brand"></a>
     <div class="search-nav">
         <form class="search" action="/action_page.php">
             <input type="text" placeholder="Search.." name="search">
@@ -40,7 +40,7 @@
     <div id="list-view">
         <ul>
             <li class="list-item">
-                <div class="item-image"id="item1"></div>
+                <div class="item-image" id="item1"></div>
                 <div>
                     <h2>Niagara Region
                         <i class="fas fa-star star"></i>
@@ -53,9 +53,24 @@
                 </div>
             </li>
             <li class="list-item">
-                <div class="item-image"id="item2"></div>
+                <div class="item-image" id="item2"></div>
                 <div>
-                    <h2>Niagara Region
+                    <h2>Hamilton
+                        <i class="fas fa-star star"></i>
+                        <i class="fas fa-star star"></i>
+                        <i class="fas fa-star star"></i>
+                        <i class="fas fa-star star"></i>
+                        <i class="fas fa-star star"></i>
+                    </h2>
+                    <p> Hamilton features many types of factories.
+                        Big factories, small factories, and even medium
+                        factories.</p>
+                </div>
+            </li>
+            <li class="list-item">
+                <div class="item-image" id="item3"></div>
+                <div>
+                    <h2>Barrie
                         <i class="fas fa-star star"></i>
                         <i class="fas fa-star star"></i>
                         <i class="fas fa-star star"></i>
@@ -66,9 +81,9 @@
                 </div>
             </li>
             <li class="list-item">
-                <div class="item-image"id="item2"></div>
+                <div class="item-image" id="item4"></div>
                 <div>
-                    <h2>Niagara Region
+                    <h2>Barrie
                         <i class="fas fa-star star"></i>
                         <i class="fas fa-star star"></i>
                         <i class="fas fa-star star"></i>
@@ -100,8 +115,6 @@
         </div>
         <p class="toggle noselect">MAP</p>
     </div>
-</div>
-
 </div>
 
 </body>
