--- a/results.html
+++ b/results.html
@@ -93,6 +93,32 @@
                     <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad delectus fugit in ipsam officiis, repellendus? Asperiores consequuntur deserunt ea id.</p>
                 </div>
             </li>
+            <li class="list-item">
+                <div class="item-image" id="item4"></div>
+                <div>
+                    <h2>Barrie
+                        <i class="fas fa-star star"></i>
+                        <i class="fas fa-star star"></i>
+                        <i class="fas fa-star star"></i>
+                        <i class="fas fa-star star"></i>
+                        <i class="fas fa-star star"></i>
+                    </h2>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad delectus fugit in ipsam officiis, repellendus? Asperiores consequuntur deserunt ea id.</p>
+                </div>
+            </li>
+            <li class="list-item">
+                <div class="item-image" id="item4"></div>
+                <div>
+                    <h2>Barrie
+                        <i class="fas fa-star star"></i>
+                        <i class="fas fa-star star"></i>
+                        <i class="fas fa-star star"></i>
+                        <i class="fas fa-star star"></i>
+                        <i class="fas fa-star star"></i>
+                    </h2>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad delectus fugit in ipsam officiis, repellendus? Asperiores consequuntur deserunt ea id.</p>
+                </div>
+            </li>
         </ul>
         </div>
     <div class="map-view"></div>
