Added coordinates to form

--- a/create.html
+++ b/create.html
@@ -297,6 +297,9 @@
         <label for="overview">Overview</label>
         <input type="text" id="overview" name="lastname"
                placeholder="Short overview on the area..."><br>
+        <label for="cords">Co-ordinates</label>
+        <input type="number" id="cords" name="area-name" placeholder="Latitude..">
+        <input type="number" name="area-name" placeholder="Longitude.."><br>
         <label for="pic">Picture</label>
         <input type="file" id="pic" name="pic" accept="image/*">
         <input class = "button-style centerX" type="submit" value="Submit">
