--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="line"></div>
     </div>
     <ul class="nav-links">
-        <a href="#">About</a>
+        <a href="create.html">Add Area</a>
         <a href="#">About</a>
         <a href="#">About</a>
     </ul>
