--- a/results.html
+++ b/results.html
@@ -15,7 +15,7 @@
     <div class="search-nav">
         <form class="search" action="/action_page.php">
             <input type="text" placeholder="Search.." name="search">
-            <button type="submit">
+            <button type="button" onclick="window.location.href='results.html'">
                 <i class="fa fa-search" style="color:blue;"></i>
             </button>
         </form>
@@ -127,7 +127,7 @@
     <div class="search-main">
         <form class="search" action="/action_page.php">
             <input type="text" placeholder="Search.." name="search">
-            <button type="submit">
+            <button type="button" onclick="window.location.href='results.html'">
                 <i class="fa fa-search"></i>
             </button>
         </form>
