Fixed issue where sumbit button would not have a space underneath it

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div>
             <button class="close log_buttons">Close</button>
             <!---------    SIGN UP FORM       --------->
-            <form id="form_signUp">
+            <form class ="add-object" id="form_signUp">
                 <h1>Create an Account</h1>
                 Name:<br>
                 <input type="text" name="name"><br>
@@ -74,7 +74,7 @@
             </form>
             <!---------   LOGIN FORMS       --------->
             <form id="form_login">
-                <h2>Login</h2>
+                <h1>Login</h1>
                 Username:<br>
                 <input type="text" name="user"><br>
                 Password:<br>
