--- a/create.html
+++ b/create.html
@@ -5,7 +5,7 @@
     <title>Add an Area</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="main.js"></script>
-    <link rel="stylesheet" href="style/style.css"></link>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
 
@@ -13,15 +13,17 @@
     <a href="index.html" id="nav-brand"></a>
     <div class="search-nav">
         <form class="search">
-            <input type="text" placeholder="Search.." href="results.html">
-            <button type="submit">
+            <input type="text" placeholder="Search..">
+            <button type="button" onclick="window.location.href='results.html'">
                 <i class="fa fa-search" style="color:blue;"></i>
             </button>
         </form>
     </div>
     <div class="buttons-nav">
-        <button class="button-style login-button">Login</button>
-        <button class="button-style sign-button">Sign Up</button>
+<!--        <button class="button-style login-button">Login</button>-->
+<!--        <button class="button-style sign-button">Sign Up</button>-->
+        <button id="account-button" class="button-style">Hello, Username!</button>
+
     </div>
     <div class="hamburger">
         <div class="line"></div>
@@ -29,7 +31,7 @@
         <div class="line"></div>
     </div>
     <ul class="nav-links">
-        <a href="create.html">Add Area</a>
+        <a href="create.html">Add an Area</a>
         <a href="#">About</a>
         <a href="#">About</a>
     </ul>
