Fixed bug where blur effect did not cover entire background. Fixed bug where scrolling was not possible in the signup/login forms.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <a href="#">About</a>
     </ul>
 </nav>
-
+<div id="background"><div id="background-blur"></div></div>
 <div id="landing-page">
 
     <div class="search-main">
