Fixed Create an object page

--- a/create.html
+++ b/create.html
@@ -37,7 +37,7 @@
     </ul>
 </nav>
 
-<div class="add-object center">
+<div class="add-object centerX">
     <h1> Add an area to Areago </h1>
     <form class="add-object" action="/action_page.php">
         <label for="name">Area Name</label>
