--- a/object.html
+++ b/object.html
@@ -10,11 +10,11 @@
 <body>
 
 <nav>
-    <a href="home" id="nav-brand"></a>
+    <a href="index.html" id="nav-brand"></a>
     <div class="search-nav">
         <form class="search" action="/action_page.php">
             <input type="text" placeholder="Search.." name="search">
-            <button type="submit">
+            <button type="button" onclick="window.location.href='results.html'">
                 <i class="fa fa-search" style="color:blue;"></i>
             </button>
         </form>
@@ -29,9 +29,9 @@
         <div class="line"></div>
     </div>
     <ul class="nav-links">
+        <a href="create.html">Add an Area</a>
         <a href="#">About</a>
-        <a href="#">About</a>
-        <a href="#">About</a>
+        <a href="#">Contact</a>
     </ul>
 </nav>
 
