--- a/results.html
+++ b/results.html
@@ -33,7 +33,7 @@
     <ul class="nav-links">
         <a href="create.html">Add an Area</a>
         <a href="#">About</a>
-        <a href="#">About</a>
+        <a href="#">Contact</a>
     </ul>
 </nav>
 
@@ -45,7 +45,7 @@
     <div id="list-view">
 <!--        Each element in the list is a search result-->
         <ul>
-            <li class="list-item">
+            <li class="list-item" onclick="window.location.href='object.html'">
                 <div class="item-image" id="item1"></div>
                 <div>
                     <h2>Niagara Region
