--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <ul class="nav-links">
         <a href="create.html">Add an Area</a>
         <a href="#">About</a>
-        <a href="#">About</a>
+        <a href="#">Contact</a>
     </ul>
 </nav>
 <div id="background"><div id="background-blur"></div></div>
@@ -84,6 +84,19 @@
         </div>
     </div>
 </div>
+
+<footer class="web-footer">
+    <div class="left-side">
+        <h4>Contact Us:</h4>
+        <h5>Phone Number: (905) 525-9140</h5>
+        <h5>Address: 1280 Main St W, Hamilton, ON L8S 4L8</h5>
+        <h6><br><br>Areago © 2019</h6>
+    </div>
+    <div class="right-side">
+        <a><i class="fab fa-twitter"></i></a>
+        <a><i class="fab fa-facebook-f"></i></a>
+    </div>
+</footer>
 
 </body>
 </html> 
