--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style/style.css">
     <script src="main.js"></script>
+    <script src="https://kit.fontawesome.com/673e50af74.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
 
