--- a/object.html
+++ b/object.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="object-style.css">
+    <link rel="stylesheet" href="style/object-style.css">
     <script src="https://kit.fontawesome.com/673e50af74.js" crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </head>
@@ -20,8 +20,9 @@
         </form>
     </div>
     <div class="buttons-nav">
-        <button class="button-style login-button">Login</button>
-        <button class="button-style sign-button">Sign Up</button>
+<!--        <button class="button-style login-button">Login</button>-->
+<!--        <button class="button-style sign-button">Sign Up</button>-->
+        <button id="account-button" class="button-style">Hello, Username!</button>
     </div>
     <div class="hamburger">
         <div class="line"></div>
