--- a/create.html
+++ b/create.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!-- Mobile -->
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Add an Area</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="main.js"></script>
