Only one render is now performed for the whole page

--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="nav"></div>
-    <div id="landing-page"></div>
-    <div id="signup" class="signup"></div>
-    <div id="login" class="login"></div>
-    <div id = footer></div>
+    <div id="root"></div>
   </body>
 </html>
