--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>React App</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZ-7P4_Z6trtzAZgL3s_Oq3SEY_Q8TKzw&libraries=places"></script>
     <script src="https://kit.fontawesome.com/673e50af74.js" crossorigin="anonymous"></script>
   </head>
   <body>
