--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
           <title>React App</title>
   </head>
 <body>
-  <h2>This site has moved to <a> http://18.217.99.172/Review</h2>
+  <h2>This site has moved to http://18.217.99.172/Review</h2>
 </body>
 </html>
