--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
           <title>React App</title>
   </head>
 <body>
-  <h2>This site has moved to https://areago.ca/Review</h2>
+  <h2>This site has moved to https://areago.ca/</h2>
 </body>
 </html>
