--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"/
-          <title>React App</title>
-  </head>
-<body>
-  <h2>This site has moved to https://areago.ca/</h2>
-</body>
+<!DOCTYPE html>
+<html>
+   <head>
+      <title>HTML Meta Tag</title>
+      <meta http-equiv = "refresh" content = "3; url = https://areago.ca" />
+   </head>
+   <body>
+      <p>Redirecting to AreaGo.ca</p>
+   </body>
 </html>
