--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
       <meta http-equiv = "refresh" content = "3; url = https://areago.ca" />
    </head>
    <body>
-      <p>Redirecting to AreaGo.ca</p>
+      <p>Redirecting to Areago.ca</p>
    </body>
 </html>
